overflow issue fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,9 @@ body{
     height: fit-content;
 }
 
+.root{
+    overflow-x: hidden;
+}
 /*==========================================
 Fonts Css
 ==========================================*/
